--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "@tailwindcss/vite": "^4.1.13",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
+    "react-parallax-tilt": "^1.7.308",
     "react-router-dom": "^7.9.1",
+    "react-toastify": "^11.0.5",
+    "react-typing-effect": "^2.0.5",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
